# MultiModuleBuildLogic

./: build.gradle.kts  settings.gradle.kts
ModuleA/: build.gradle.kts
ModuleA/src/androidTest/java/com/di/modulea/: ExampleInstrumentedTest.kt
ModuleA/src/main/cpp/: native-libA.cpp
ModuleA/src/main/res/layout/: activity_main_activity.xml
ModuleB/: build.gradle.kts
ModuleB/src/main/: AndroidManifest.xml
app/: build.gradle.kts  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
build-logic/convention/: build.gradle.kts
build-logic/convention/src/main/java/: AndroidApplicationConventionPlugin.kt  AndroidApplicationFirebaseConventionPlugin.kt  AndroidHiltConventionPlugin.kt  AndroidLibraryConventionPlugin.kt  AndroidRoomConventionPlugin.kt
core/common/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
merchantmodule/: build.gradle.kts
merchantmodule/src/main/: AndroidManifest.xml
merchantmodule/src/main/cpp/: CMakeLists.txt  native-libB.cpp
merchantmodule/src/main/res/layout/: activity_main_b.xml
merchantside/: build.gradle.kts
merchantside/src/main/cpp/: native-libB.cpp
merchantside/src/main/res/layout/: activity_main_b.xml
usermodule/: build.gradle.kts
usermodule/src/main/: AndroidManifest.xml
usermodule/src/main/res/layout/: activity_main_activity.xml
userside/: build.gradle.kts
userside/src/main/: AndroidManifest.xml
userside/src/main/cpp/: CMakeLists.txt
(+80 files in other folders)
